fix header alignment

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,6 +9,20 @@
 }
 
 /* Portfolio Section */
+.portfolio {
+  text-align: center;
+}
+
+.portfolio h5 {
+  margin-top: 1rem;
+}
+
+.portfolio #isotope-filters button {
+  font-size: 0.8rem;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 .portfolio .gallery {
   display: block;
 }
@@ -17,7 +31,15 @@
   margin-top: 20px;
 }
 
+.portfolio .gallery img.lg {
+  margin-top: 1rem;
+}
+
 /* Contact Section */
+.contact .heading-1 {
+  text-align: center;
+}
+
 .contact form {
   margin-top: 40px;
 }
